# nacos-sdk-rust-binding-node

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.d.ts  index.js  package.json  tea.yaml
.github/workflows/: CI.yml
benchmark/: config.js
example/: config.js  config_decrypt.js  naming.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: config.rs  lib.rs  naming.rs  plugin.rs
