[package]
edition = "2021"
name = "nacos-sdk-rust-binding-node"
version = "0.3.0"
authors = ["CheirshCai <785427346@qq.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/opc-source/nacos-sdk-rust-binding-node"
description = "nacos-sdk-rust binding for NodeJs with napi."
categories = ["network-programming", "development-tools"]
keywords = ["nacos", "ffi", "napi", "bingding", "nodejs"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2"

nacos-sdk = { version = "0.3.0", features = ["async"] }
#nacos-sdk = { git = "https://github.com/nacos-group/nacos-sdk-rust.git", branch = "main", features = ["async"] }

tracing-subscriber = { version = "0.3", features = ["default"] }
#tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] } # occur `<unknown time>`
tracing-appender = "0.2"
lazy_static = "1.4.0"
async-trait = "0.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
